--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
   margin-top: 100px;
   padding: 0;
   color: #333;
-  background: #fff url(light-veneer.png);
+  background: #fff url(p0428_m.png);
 }
 
 
