--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,11 @@ hr {
     font-size: 10px;
   }
 
+  .content-body{
+    width: 400px;
+    margin: 0 auto;
+  }
+
   .page-header h1 {
     /* position: relative; */
     display: inline-block;
