--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   text-align:center;
 }
 
-
+/* タイトル装飾　relativeつけるとバグる */
 /* .page-header h1:before {
   content: '';
   position: absolute;
@@ -194,7 +194,7 @@ hr {
   }
 
   .content-body{
-    width: 350px;
+    width: 300px;
     margin: 0 auto;
   }
 
