--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .setumei{
-  padding: 30px 0px;
+  padding: 0px 0px 40px 0px;
 }
 
 .content-body .button{
@@ -179,6 +179,12 @@ hr {
     padding:0% 10%;
   }
 
+  .setumei img{
+    width: 100%;
+    height: auto;
+    padding:0% 20%;
+  }
+
   .item {
     width: 12.66%;
     margin: 2%;
@@ -218,6 +224,12 @@ hr {
   .samune img {
     width: 100%;
     height: auto;
+  }
+
+  .setumei img{
+    width: 100%;
+    height: auto;
+    padding:0% 10%;
   }
 
   .item {
