--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,12 @@ body {
 }
 
 .setumei{
-  padding: 0px 0px 40px 0px;
+  padding: 0px 0px 60px 0px;
 }
 
 .content-body .button{
   text-align: center;
+  padding: 5% 0 0 0;
 }
 
 .btn-flat-double-border {
@@ -200,6 +201,11 @@ hr {
     margin: 0 auto;
   }
 
+  .content-body h1{
+    text-align: center;
+    font-size: 20px;
+  }
+
   .page-header h1 {
     /* position: relative; */
     display: inline-block;
@@ -247,8 +253,13 @@ hr {
     margin: 0 auto;
   }
 
+  .content-body h1{
+    text-align: center;
+    font-size: 16px;
+  }
+
   .content-body p{
-    font-size:12px
+    font-size:12px;
   }
 
   .page-header h1 {
