--- a/css/styles.css
+++ b/css/styles.css
@@ -191,9 +191,9 @@ hr {
     margin: 2%;
   }
 
-  .content-header {
+  .content-header h1{
     text-align:center;
-    font-size: 14px;
+    font-size: 24px;
   }
 
   .content-body{
@@ -203,7 +203,7 @@ hr {
 
   .content-body h1{
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .page-header h1 {
@@ -243,9 +243,9 @@ hr {
     margin: 2%;
   }
   
-  .content-header {
+  .content-header h1{
     text-align:center;
-    font-size: 10px;
+    font-size: 20px;
   }
 
   .content-body{
@@ -255,7 +255,7 @@ hr {
 
   .content-body h1{
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
   }
 
   .content-body p{
