--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ hr {
   .content-header h1{
     text-align:center;
     font-size: 24px;
+    color: darkred;
   }
 
   .content-body{
@@ -203,6 +204,10 @@ hr {
 
   .content-body h1{
     text-align: center;
+    font-size: 18px;
+  }
+
+  .content-body h3{
     font-size: 18px;
   }
 
@@ -246,6 +251,7 @@ hr {
   .content-header h1{
     text-align:center;
     font-size: 20px;
+    color: darkred;
   }
 
   .content-body{
@@ -255,6 +261,10 @@ hr {
 
   .content-body h1{
     text-align: center;
+    font-size: 14px;
+  }
+
+  .content-body h3{
     font-size: 14px;
   }
 
