--- a/css/styles.css
+++ b/css/styles.css
@@ -193,8 +193,9 @@ hr {
 
   .content-header h1{
     text-align:center;
+    text-decoration: underline;
     font-size: 24px;
-    color: darkred;
+    /* color: darkred; */
   }
 
   .content-body{
@@ -250,8 +251,9 @@ hr {
   
   .content-header h1{
     text-align:center;
+    text-decoration: underline;
     font-size: 20px;
-    color: darkred;
+    /* color: darkred; */
   }
 
   .content-body{
