アクセス欄

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,13 @@ body {
 }
 
 
+.access{
+  margin: 80px 0px 0px 0px;
+  padding: 5px;
+  background:#fff url(3229890_s.jpg);
+}
+
+
 .content-footer .button a {
   background: darkred;
   color: #fff;
@@ -216,7 +223,7 @@ hr {
     /* position: relative; */
     display: inline-block;
     margin-bottom: 1em;
-    font-size: 30px;
+    font-size: 40px;
   }
 
   .pageitem {
@@ -228,11 +235,11 @@ hr {
     font-size: 18px;
   }
   
-  /* .iframe{
-    width:600px; 
-    height:450px; 
-  }
- */
+ .access h1{
+   text-align: center;
+   font-size: 20px;
+ }
+
 }
 
 /*画面幅が575px以下（スマホ）に適用したいスタイル*/
@@ -283,7 +290,7 @@ hr {
     /* position: relative; */
     display: inline-block;
     margin-bottom: 1em;
-    font-size: 25px;
+    font-size: 30px;
   }
 
   .pageitem {
@@ -295,10 +302,9 @@ hr {
     font-size: 12px;
   }
 
-  .iframe{
-    width:600px; 
-    height:450px; 
+  .access h1{
+    text-align: center;
+    font-size: 18px;
   }
-
 
 }
