--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,27 @@ hr {
   font-size:12px;
 }
 
+.downlode .button{
+  text-align: center;
+}
+
+.btn-square {
+  display: inline-block;
+  margin:0 auto;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: rgb(47, 79, 64);/*ボタン色*/
+  color: #FFF;
+  border-bottom: solid 4px rgb(78, 94, 79);
+  border-radius: 3px;
+}
+.btn-square:active {
+  /*ボタンを押したとき*/
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);/*下に動く*/
+  border-bottom: none;/*線を消す*/
+}
+
 
 /*画面幅が576px以上（タブレット、デスクトップ）に適用したいスタイル*/
 @media (min-width: 576px) {
