--- a/css/styles.css
+++ b/css/styles.css
@@ -86,10 +86,12 @@ body {
   border-radius: 10px;/*角の丸み*/
 }
 
-/* .event p{
-  margin: 0; 
-  padding: 0;
-} */
+.event h3{
+  padding: 0.25em 0.5em;/*上下 左右の余白*/
+  color: #494949;/*文字色*/
+  background: transparent;/*背景透明に*/
+  border-left: solid 5px darkred;/*左線*/
+}
 
 .event video{
   width: 100%;
