--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ body {
   height: auto;
 }
 
+
 .linkcolor a{
  color: rgb(97, 64, 39);
 }
@@ -228,6 +229,10 @@ body {
 
 .page-setumei p{
   margin: 0px 0px 600px 0px;
+}
+
+.content-body iframe{
+  width: 100%;
 }
 
 .access{
