ぎゅの写真

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,11 @@ hr {
     padding:0% 10%;
   }
 
+  .gyu{
+    width: 80%;
+    margin: 0 auto;
+  }
+
   .setumei img{
     width: 100%;
     height: auto;
