--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,17 @@ body {
   top: 0;
 }
 
+.icon p{
+  position: fixed;
+  top: -5px;
+  left: 20px;
+}
+
+.icon img{
+  width: 50px;
+  height: 50px;
+}
+
 .site-header h1 {
   margin: 0; padding: 0;
   font-size: 20px;
