--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -22,10 +22,10 @@
 ul.bxslider {
   list-style: none;
 }
-.bx-viewport {
-  /*fix other elements on the page moving (on Chrome)*/
+/* .bx-viewport {
+  fix other elements on the page moving (on Chrome)
   -webkit-transform: translatez(0);
-}
+} */
 /** THEME
 ===================================*/
 
