--- a/css/nav.css
+++ b/css/nav.css
@@ -74,7 +74,7 @@
 }
 
 #nav-drawer {
-  background: #000;
+  background: darkred;
   color: #fff;
   position: fixed;
   top: 0;
@@ -104,7 +104,7 @@
 }
 
 #nav-drawer a:hover {
-  color: #666;
+  color: darkgrey;
 }
 
 
