デザイン変更

--- a/css/styles.css
+++ b/css/styles.css
@@ -261,9 +261,13 @@ body {
   text-align: center;
 }
 
+.secretword p{
+  font-size: 25px;
+}
+
 .hint{
   text-align: center;
-  margin: 80px 0px 0px 0px;
+  margin: 80px 0px 80px 0px;
 }
 
 .hint p{
@@ -308,9 +312,16 @@ hr {
   border-bottom: 1px solid #fff;
 }
 
+footer{
+  margin:20px 0 0 0;
+  padding:20px 0;
+  background: darkred;
+}
+
 .credit{
   text-align: center;
-  margin: 50px 0;
+  color: #fff;
+  margin: 50px 10px  0;
   font-size:12px;
 }
 
@@ -519,6 +530,10 @@ hr {
   }
   #author_profile .right ul.author_sns li {
     margin-bottom: 20px;
+  }
+
+  .secretword p{
+    font-size: 25px;
   }
 
 }
