--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ body {
 }
 
 /* タイトル装飾　relativeつけるとバグる */
-.page-header h1::after {
+/* .page-header h1::after {
   content: "";
   position: absolute;
   z-index: 900;
@@ -98,7 +98,7 @@ body {
   transform: translateX(-50%);
   background-color: black;
   border-radius: 2px;
-}
+} */
 
 .event{
   padding: 0.5em 1em;
@@ -415,29 +415,6 @@ footer{
   .yomihuda h2{
     font-size: 18px;
   }
-
-  /* .balloon2-right {
-    position: relative;
-    display: inline-block;
-    margin: 50px 15px 1.5em 0;
-    padding: 7px 10px;
-    min-width: 120px;
-    max-width: 100%;
-    color: rgb(97,102,38);
-    font-size: 16px;
-    background: rgb(97,102,38);
-    border-radius: 10px;
-  }
-  
-  .balloon2-right:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 98%;
-    margin-top: -15px;
-    border: 15px solid transparent;
-    border-left: 15px solid rgb(97,102,38);
-  } */
   
   .balloon2-right p {
     color: #fff;
@@ -486,12 +463,6 @@ footer{
     width: 80px;
   }
   
-  /* .balloon5 .faceicon img{
-    width: 100%;
-    height: auto;
-    border: solid 3px rgb(97,102,38);
-    border-radius: 50%;
-  } */
   
   .balloon5 .chatting {
     width: 100%;
@@ -517,6 +488,7 @@ footer{
   }
   
   .says p {
+    font-size: 16px;
     margin: 0;
     padding: 0;
   }
@@ -614,7 +586,7 @@ footer{
     font-size: 30px;
   }
 
-  .page-header h1::after {
+  /* .page-header h1::after {
     content: "";
     position: absolute;
     z-index: 900;
@@ -627,7 +599,7 @@ footer{
     transform: translateX(-50%);
     background-color: black;
     border-radius: 2px;
-  }
+  } */
 
   .pageitem {
     width: 46%;
