--- a/css/styles.css
+++ b/css/styles.css
@@ -431,6 +431,13 @@ footer{
     font-weight: bold;
   }
 
+  .shasin img{
+    width: 500px;
+    height: auto;
+    border-radius: 10px;
+    padding: 0;
+  }
+
   .page-setumei p{
     font-size: 16px;
   }
@@ -442,11 +449,7 @@ footer{
     padding: 0;
   }
 
-  .twitter-link{
-    text-align: center;
-  }
-
-
+  
   /* 作者からコメント */
   .comment{
     padding: 80px 0 0 0;
@@ -623,6 +626,13 @@ footer{
     font-weight: bold;
     margin: 5px 0 0 0;
     padding: 0 0 10px 0;
+  }
+
+  .shasin img{
+    width: 300px;
+    height: auto;
+    border-radius: 10px;
+    padding: 0;
   }
 
   .page-setumei p{
